--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,7 +11,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Check formatting
-      run: terraform fmt -check .
+      run: terraform fmt -check
 
   validate-module:
     runs-on: ubuntu-latest
