Use latest terraform

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,6 +10,8 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
+    - uses: hashicorp/setup-terraform@v2
+
     - name: Check formatting
       run: terraform fmt -check
 
@@ -17,6 +19,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+
+    - uses: hashicorp/setup-terraform@v2
 
     - name: Run terraform init
       run: terraform init
